feat: Implement user authentication and management features